--- a/source/layout.haml
+++ b/source/layout.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:charset => "utf-8"}
     = stylesheet_link_tag 'main'
-    = javascript_include_tag( "https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js", "all" )
+    = javascript_include_tag( "https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js", "jquery.masonry.min.js", "all" )
     = yield_content :head
   %body{:class => page_classes}
     %header#hd
