--- a/source/layout.haml
+++ b/source/layout.haml
@@ -5,7 +5,7 @@
     %meta{:content => "Pinterest Clone html mockup", :property => "og:title"}
     %meta{:content => "Pinterest Clone", :property => "og:site_name"}
     %meta{:content => "Mockup by evendesign http://evendesign.tw", :property => "og:description"}
-    %meta{:content => "http://pinterest-clone.heroku.com/images/fb.jpg", :property => "og:image"}
+    %meta{:content => "http://pinterest-clone.heroku.com/images/fb.png", :property => "og:image"}
     %meta{:content => "http://pinterest-clone.heroku.com/", :property => "og:url"}
     = stylesheet_link_tag 'main'
     = javascript_include_tag( "https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js", "jquery.masonry.min.js", "all" )
