--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -119,6 +119,10 @@ body {
         color: #8c7e7e;
       }
     }
+    .flickrbombWrapper img {
+      margin: 0;
+    }
+    .flickrbombWrapper,
     img {
       margin-left: -35px;
       float: left;
