--- a/source/layout.haml
+++ b/source/layout.haml
@@ -16,3 +16,5 @@
     .wrapper
       #bd
         = yield
+    %a{:href => "https://github.com/evenwu/pinterest-clone-layout"}
+      %img{:alt => "Fork me on GitHub", :src => "https://a248.e.akamai.net/assets.github.com/img/5d21241b64dc708fcbb701f68f72f41e9f1fadd6/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67", :style => "position: fixed; top: 0; left: 0; border: 0; z-index: 1000;"}
